# mekong-cli

./: .coveragerc  .dockerignore  .env  .env.example  .eslintignore  .gitignore  .gitmodules  .npmrc  .sentryclirc  .tom_hum_state.json  .turboignore  .vercelignore  AGENTS-WORKFLOW.md  AGENTS.md  ANTIGRAVITY.md  AUDIT.md  CLAUDE.md  CLAUDE.md.backup-260304  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENTIRE_TEST.md  FORK.md  GEMINI.md  HANDOFF.md  HUONG-DAN-SU-DUNG-v0.1.md  HUONG-DAN-SU-DUNG-v0.2.md  HUONG-DAN-SU-DUNG.md  IMPLEMENTATION-SPEC-v0.1.md  IMPLEMENTATION-SPEC-v0.2.md  MIGRATION-READY.md  Makefile  Modelfile.cto-brain  PROXY_ARCHITECTURE.md  PROXY_RULES.md  QUICKSTART.md  README.md  README.vi.md  REVENUE-LIVE.md  ROIAAS-ROADMAP.md  (+68 more)
.agencyos/: README.md  agents.json  config.json  pricing.json
.claude/: .ck.json  metadata.json  settings.json
.cleo/: .context-state.json  config.json  todo-log.json  todo.json
.cto-reports/: bug-sprint-coverage-audit-2026-03-13.md  cook-audit-complete-2026-03-13.md  cook_perf_optimization_2026-03-13.md  dev-bug-sprint-complete-2026-03-13.md  dev-bug-sprint-console-fix-complete-2026-03-13.md  dev-bug-sprint-debug-fix-complete-2026-03-13.md  dev-bug-sprint-test-coverage-complete-2026-03-13.md  dev-feature-complete-2026-03-13.md  dev-feature-ux-complete-2026-03-13.md  feature-build-ui-components-2026-03-13.md  feature-ux-build-complete-2026-03-13.md  frontend-responsive-fix-complete-2026-03-13.md  plan.md  release-notes-v5.4.0.md  (+144 more)
apps/sophia-proposal/agi-sops/: .gitignore  README.md  pyproject.toml
apps/sophia-proposal/agi-sops/docs/: code-standards.md  project-roadmap.md  system-architecture.md
apps/sophia-proposal/agi-sops/sops/procedures/rag-test-sop/1.0.0/: sop.yaml
apps/sophia-proposal/agi-sops/src/: __init__.py
apps/sophia-proposal/agi-sops/src/core/: __init__.py  engine.py  exceptions.py  models.py
apps/sophia-proposal/agi-sops/src/llm/: __init__.py  client.py
apps/sophia-proposal/agi-sops/src/rag/: __init__.py  retriever.py
apps/sophia-proposal/agi-sops/src/sops/: __init__.py  parser.py  storage.py
apps/sophia-proposal/agi-sops/tests/: test_cli.py  test_llm_client.py  test_pev_engine.py  test_rag_engine.py  test_sop_parser.py
apps/sophia-video-bot/: pyproject.toml
(+4936 files in other folders)
